fixed? some alignment stuff

--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@ body {
     flex-flow: column wrap;
     align-items: center;
     width: 100%;
+    height: 100%;
     margin: 0;
+    padding: 0;
 }
-header {
+/* header {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     background-color: #e97a7a;
     padding: 0 auto;
-}
+} */
 h3 {
     /* width: 100%; */
     font-size: 35px;
@@ -39,10 +41,10 @@ p {
 }
 .nav-bar {
     display: flex;
+    background-color: #e97a7a;
     justify-content: space-between;
-    flex: 1 0 auto;
-    /* width: 1450px; wth?*/
-    padding: 0 18px;
+    width: 100%;
+    padding: 0 100px;
 }
 .title {
     padding: 0 80px;
@@ -51,16 +53,18 @@ p {
 .statement1 {
     font-size: 40px;
     font-weight: 700;
-    max-width: 300px;
+    width: 300px;
     margin: 0;
 }
 .heading {
     display: flex;
     flex-flow: row wrap;
+    flex-basis: auto;
     justify-content: center;
-    width: 1000px;
-    padding: 84px;
-    gap: 15px;
+    background-color: #e97a7a;
+    width: 100%;
+    padding: 100px;
+    gap: 20px;
 }
 .card1 {
     display: flex;
